--- a/index.html
+++ b/index.html
@@ -1,25 +1,17 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Main page</title>
 </head>
 <body>
-<h2>Messages</h2>
+<h2>Steps</h2>
 <form method="post" action="/add_message">
-    <input type="text" name="text">
-    <input type="text" name="tag">
+    <input type="ineger" name="Steps">
+    <input type="datet" name="Date">
     <button type="submit">Add post</button>
 </form>
 
-<h3>Messages feed</h3>
-{% for message in messages %}
-<div>{{ message.text }}
-    {% for tag in message.tags %}
-        <b>#{{ tag.text }}</b>
-    {% endfor %}
-</div>
-{% endfor %}
 
 </body>
 </html>
