--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <title>Steps Page</title>
 </head>
-<body bgcolor="B6EFD4">
-<h2 style="color:#5A2A27">Steps</h2>
+<body>
+<h2>Steps</h2>
 <form method="post" action="/add_step">
-    <b style="color:#2F4550">Steps: </b><input type="text" name="step"><br>
-    <b style="color:#2F4550">Date: </b><input type="date" name="date"><br>
+    <b>Steps: </b><input type="text" name="step"><br>
+    <b>Date: </b><input type="date" name="date"><br>
     <button type="submit">Add steps note</button>
 </form>
 
-<h3 style="color:#5A2A27">Steps history</h3>
+<h3>Steps history</h3>
 {% for step in stepsnote %}
-<div style="color:#2F4550">
+<div>
     <b>{{ step.steps }}</b><br>
     <i>{{ step.date }}</i>
 </div>
